--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Claudia Martín Portfolio</title>
+    <link href="/src/App.css" rel="stylesheet">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="border-2 border-dashed"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
