fixed unexpected scroll

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Claudia Martín Portfolio</title>
     <link href="/src/App.css" rel="stylesheet">
   </head>
-  <body>
-    <div id="root" class="border-2 border-dashed"></div>
+  <body class="font-base h-full">
+    <div id="root" class="flex justify-center items-center"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
