--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="/src/App.css" rel="stylesheet">
   </head>
   <body class="font-base h-full">
-    <div id="root" class="flex justify-center items-center"></div>
+    <div id="root" class="flex justify-center items-center p-8"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
