removed no needed styles stuff

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Claudia Martín Portfolio</title>
-    <link href="/src/App.css" rel="stylesheet">
+    <link href="/src/index.css" rel="stylesheet">
   </head>
   <body class="font-base h-full">
     <div id="root" class="flex justify-center items-center p-8"></div>
